<resources>
    <string name="app_name">FingerPrintTest</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="device_status">Deviece status</string>
    <string name="finger_print">Finger Print</string>
    <string name="quality">Quality</string>
    <string name="open_device">Open Deviece</string>
    <string name="capture">Capture</string>
    <string name="please_input_finger_print_of">Please enter finger print of user</string>
</resources>